@@ -34,64 +34,12 @@
     <TBODY>
         {if $counter%2 && $counter!=0}{cycle print=false}{/if}
         {assign var=counter value=0}
-        {section name=eventlist loop=$eventlist}
-        {if $eventlist[eventlist].date == $daylist[daylist]}
-        {math equation="x+1" x=$counter assign=counter}
-        <TR class="highlight {cycle}{if $eventlist[eventlist].closed} blend{/if}"  >
-            <TD style="min-width: 90px; {if isset($_EVENTSTYLES[$eventlist[eventlist].type])} {$_EVENTSTYLES[$eventlist[eventlist].type]}{/if}" class="text-center bold">
-                {$_EVENTTYPES[$eventlist[eventlist].type]}<BR>
-		{if $eventlist[eventlist].ticketid}<A href="?m=rtticketview&id={$eventlist[eventlist].ticketid}">{$eventlist[eventlist].ticketid|string_format:"%06d"}</A>{/if}
-            </TD>
-            <TD class="text-left nobr" onClick="return self.location.href = '?m=eventinfo&amp;id={$eventlist[eventlist].id}'">
-                <span class="bold">
-                    {math equation="floor(x/100)" x=$eventlist[eventlist].begintime format="%02d"}:{math equation="x % 100" x=$eventlist[eventlist].begintime format="%02d"}
-                    {if $eventlist[eventlist].begintime != $eventlist[eventlist].endtime}
-                    - {math equation="floor(x/100)" x=$eventlist[eventlist].endtime format="%02d"}:{math equation="x % 100" x=$eventlist[eventlist].endtime format="%02d"}
-                    {/if}</span><BR>
-                {foreach $eventlist[eventlist].userlist as $user}
-                <A href="?m=userinfo&amp;id={$user.id}">{$user.name|truncate:"25":"...":true}</A><BR>
-                {/foreach}
-            </TD>
-            <TD onClick="return self.location.href = '?m=eventinfo&amp;id={$eventlist[eventlist].id}'">
-                <IMG src="img/calendar.gif" alt=""> <span class="bold">{$eventlist[eventlist].title}</span>
-                &nbsp;<a href="?m=eventinfo&id={$eventlist[eventlist].id}">&raquo;&raquo;&raquo;</a><BR>
-                {if $eventlist[eventlist].description != ''}<IMG src="img/info1.gif" alt=""> {$eventlist[eventlist].description}{/if}<br>
-                {if $eventlist[eventlist].note != ''}<span{if !$eventlist[eventlist].closed} style="color: red;"{/if}><IMG src="img/note.gif" alt=""> {$eventlist[eventlist].note}</span>{/if}
-            </TD>
-            <TD class="nobr" colspan="2">
-                {if $eventlist[eventlist].customername}
-                <A href="?m=customerinfo&amp;id={$eventlist[eventlist].customerid}">{$eventlist[eventlist].customername|truncate:"30":"...":true}</A><br>
-                {if !empty($eventlist[eventlist].address_id)}
-                {$eventlist[eventlist].location}
-                {elseif !empty($eventlist[eventlist].nodeid)}
-                <a href="?m=nodeinfo&id={$eventlist[eventlist].nodeid}">{$eventlist[eventlist].nodelocation}</a>
-                {else}
-                {$eventlist[eventlist].customerlocation}
-                {/if}
-                {/if}
-            </TD>
-            <TD class="text-right nobr">
-                <div class="no-print">
-                    {if ConfigHelper::checkPrivilege('timetable_management')}
-                    {if $eventlist[eventlist].closed}
-                    <A href="?m=eventedit&amp;id={$eventlist[eventlist].id}&amp;action=open"><IMG src="img/resolved.gif" alt="{trans("Open")}"title="&nbsp;{trans("Open")}&nbsp;"></A>
-                    {else}
-                    <A href="?m=eventedit&amp;id={$eventlist[eventlist].id}&amp;action=close"><IMG src="img/open.gif" alt="{trans("Close")}"title="&nbsp;{trans("Close")}&nbsp;"></A>
-                    {/if}
-                    <A href="?m=eventdel&amp;id={$eventlist[eventlist].id}" OnClick="return confirmLink(this, '{trans("Are you sure, you want to delete that event?")}')"><IMG src="img/delete.gif" alt="{trans("Delete")}"title="&nbsp;{trans("Delete")}&nbsp;"></A>&nbsp;
-                    <A href="?m=eventedit&amp;id={$eventlist[eventlist].id}"><IMG src="img/edit.gif" alt="{trans("Edit")}"title="&nbsp;{trans("Edit")}&nbsp;"></A>
-                    {/if}
-                    {if $eventlist[eventlist].note == ''}
-                    {foreach item=user from=$eventlist[eventlist].userlist}
-                    {if $layout.logid == $user.id}<A href="?m=eventnote&id={$eventlist[eventlist].id}"><IMG src="img/note.gif" alt="{trans("Add Note")}" title="{trans("Add Note")}"></A>{/if}
-                    {/foreach}
-                    {/if}
-                </div>
-            </TD>
-        </TR>
-        </TR>
+        {foreach $eventlist as $event}
+        {if $event.date == $daylist[daylist]}
+            {math equation="x+1" x=$counter assign=counter}
+            {include file="event/eventlistboxrow.html"}
         {/if}
-        {/section}
+        {/foreach}
     </TBODY>
 </TABLE>
 {/section}
