@@ -61,6 +61,7 @@ version ?.??.?? (????-??-??):
     are displayed in plain text; protected passwords can be still copied to clipboard [chilan]
   - improvement: updated textual representation of teryt street names (name parts reversed) [chilan]
   - enhancement: changed invoice content count precision from 2 to 3 digits [chilan]
+  - improvement: overdue events are presented at top of timetable, variable: phpui.timetable_overdue_events [interduo]
 
 version 1.11.23 (2018-03-21):
 
